tests/negative/neg_select_multiple_delay.safe
-- Test: neg_select_multiple_delay
-- Description: Select statements may have at most one delay arm.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.4.p34:f0f83b83
-- Expected: REJECT source_frontend_error

package select_multiple_delay_test

   task worker

      loop
         select
            delay 0.10
         or
            delay 0.20

